<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/settingsTitle"
    app:key="@string/parametreKey">

    <!--<SwitchPreferenceCompat
        app:key="notifications"
        app:title="Enable message notifications"/>
    -->

    <ListPreference
        app:title="@string/nativeL"
        app:key="@string/nativeLKey"
        app:entries="@array/listL"
        app:entryValues="@array/listLAlias"/>

    <ListPreference
        app:title="@string/learningL"
        app:key="@string/learningLKey"
        app:summary="@string/learningLSummary"
        app:entries="@array/listL"
        app:entryValues="@array/listLAlias"/>

    <ListPreference
        app:title="@string/dlevel"
        app:key="@string/dlevelKey"
        app:entries="@array/level"
        app:entryValues="@array/levelAlias"/>

    <!--<Preference
        app:key="feedback"
        app:title="Send feedback"
        app:summary="Report technical issues or suggest new features"/>
    -->
</PreferenceScreen>
